--- a/css/blocks/dropdown.css
+++ b/css/blocks/dropdown.css
@@ -1,3 +1,26 @@
+.dropdown {
+  position: relative;
+  display: inline-block;
+  display: flex;
+  align-items: flex-end;
+}
+
+.dropdown:hover:hover .dropdown__menu {
+  opacity: 1;
+  right: 0;
+  pointer-events: all;
+  display: block;
+}
+
+.contacts__header-dropdown-title-active {
+  position: absolute;
+  top: 100%;
+  right: 0px;
+  font-size: 13px;
+  text-decoration-line: underline;
+  color: #FF3D00;
+}
+
 .dropdown__menu {
   position: absolute;
   background: #CDD1D2;
@@ -5,15 +28,27 @@
   padding: 14px;
   width: 160px;
   top: 100%;
+  display: none;
   border-radius: 4px;
   right: 0;
-  margin-top: 9px;
+  margin-top: 25px;
   color: #1E1F20;
   font-size: 13px;
   opacity: 0;
   transition: all 0.5s;
   pointer-events: none;
+}
 
+.dropdown__menu::before {
+  content: "";
+  display: block;
+  height: 25px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 100%;
+  top: -24px;
 }
 
 .dropdown__menu::after {
@@ -21,30 +56,10 @@
   display: block;
   width: 0;
   height: 0;
-  border: 9px solid transparent;
+  border: 9px solid transparent; 
   border-top: 0;
   border-bottom: 9px solid #CDD1D2;
   position: absolute;
   bottom: 100%;
   right: 40px;
-
-}
-
-.dropdown__menu::before {
-  content: "";
-  display: block;
-  height: 9px;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 100%;
-  top: -11px
-
-}
-
-.contacts__header:hover .dropdown__menu {
-  opacity: 1;
-  right: 0;
-  pointer-events: all;
 }
